--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "pnpm --filter=./packages/* -r build",
     "test": "pnpm --filter=./tests/test-* -r start",
+    "format": "prettier --write packages/**/*.ts && prettier --write internals/**/*.ts && prettier --write tests/**/*.ts",
     "package:latest": "pnpm --filter=./packages/* -r publish --tag latest --access public",
     "package:next": "pnpm --filter=./packages/* -r publish --tag next --access public"
   },
