--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -58,7 +58,7 @@
     "@rollup/plugin-node-resolve": "catalog:rollup",
     "@rollup/plugin-typescript": "catalog:rollup",
     "@types/inquirer": "^8.2.5",
-    "@types/node": "^18.15.12",
+    "@types/node": "catalog:utils",
     "@types/ts-expose-internals": "catalog:typescript",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
