--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,10 @@
   "version": "11.0.1",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "rimraf lib && tsc",
     "dev": "rimraf lib && tsc --watch"
@@ -76,6 +80,12 @@
     "access": "public",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
-    "module": "lib/index.mjs"
+    "exports": {
+      ".": {
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts"
+      },
+      "./package.json": "./package.json"
+    }
   }
 }
