--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -3,6 +3,10 @@
   "version": "11.0.1",
   "description": "MCP (Model Context Protocol) integration for typia",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "rimraf lib && tsc",
     "dev": "rimraf lib && tsc --watch"
@@ -58,6 +62,13 @@
   "publishConfig": {
     "access": "public",
     "main": "lib/index.js",
-    "typings": "lib/index.d.ts"
+    "typings": "lib/index.d.ts",
+    "exports": {
+      ".": {
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts"
+      },
+      "./package.json": "./package.json"
+    }
   }
 }
