--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -7,6 +7,7 @@
     ".": "./src/index.ts",
     "./lib/transform": "./src/transform.ts",
     "./lib/internal/*.js": "./src/internal/*.ts",
+    "./src/internal/*": "./src/internal/*.ts",
     "./package.json": "./package.json"
   },
   "bin": {
