feat(station): exports configuration. (#1750)
* feat(station): exports configuration.

* fix examples problem

* no build script required in tests

* fix automated

* fix config

* fix nodejs version

* ok

--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -3,6 +3,13 @@
   "version": "11.0.1",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./lib/transform": "./src/transform.ts",
+    "./lib/internal/*.js": "./src/internal/*.ts",
+    "./src/internal/*": "./src/internal/*.ts",
+    "./package.json": "./package.json"
+  },
   "bin": {
     "typia": "./lib/executable/typia.js"
   },
@@ -122,6 +129,24 @@
     "access": "public",
     "main": "lib/index.js",
     "typings": "lib/index.d.ts",
-    "module": "lib/index.mjs"
+    "module": "lib/index.mjs",
+    "exports": {
+      ".": {
+        "types": "./lib/index.d.ts",
+        "import": "./lib/index.mjs",
+        "require": "./lib/index.js"
+      },
+      "./lib/transform": {
+        "types": "./lib/transform.d.ts",
+        "import": "./lib/transform.mjs",
+        "require": "./lib/transform.js"
+      },
+      "./lib/internal/*.js": {
+        "types": "./lib/internal/*.d.ts",
+        "import": "./lib/internal/*.mjs",
+        "require": "./lib/internal/*.js"
+      },
+      "./package.json": "./package.json"
+    }
   }
 }
