feat(station): rolllup configuration for ESM publishing.

--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -76,8 +76,8 @@
     "typings": "lib/index.d.ts",
     "exports": {
       ".": {
-        "require": "./lib/index.js",
-        "types": "./lib/index.d.ts"
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
       },
       "./package.json": "./package.json"
     }
