--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -83,8 +83,8 @@
     "typings": "lib/index.d.ts",
     "exports": {
       ".": {
-        "require": "./lib/index.js",
-        "types": "./lib/index.d.ts"
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
       },
       "./package.json": "./package.json"
     }
