--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -73,7 +73,7 @@
   "publishConfig": {
     "access": "public",
     "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
+    "types": "lib/index.d.ts",
     "exports": {
       ".": {
         "types": "./lib/index.d.ts",
