--- a/packages/transform/package.json
+++ b/packages/transform/package.json
@@ -8,7 +8,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "rimraf lib && tsc",
+    "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch"
   },
   "repository": {
@@ -27,9 +27,16 @@
     "@typia/utils": "workspace:^"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "catalog:rollup",
+    "@rollup/plugin-node-resolve": "catalog:rollup",
+    "@rollup/plugin-typescript": "catalog:rollup",
     "@types/node": "catalog:utils",
     "@types/ts-expose-internals": "catalog:typescript",
     "rimraf": "catalog:utils",
+    "rollup": "catalog:rollup",
+    "rollup-plugin-auto-external": "catalog:rollup",
+    "rollup-plugin-node-externals": "catalog:rollup",
+    "tinyglobby": "^0.2.12",
     "typescript": "catalog:typescript"
   },
   "sideEffects": false,
@@ -80,10 +87,12 @@
   "publishConfig": {
     "access": "public",
     "main": "lib/index.js",
-    "typings": "lib/index.d.ts",
+    "module": "lib/index.mjs",
+    "types": "lib/index.d.ts",
     "exports": {
       ".": {
         "types": "./lib/index.d.ts",
+        "import": "./lib/index.mjs",
         "default": "./lib/index.js"
       },
       "./package.json": "./package.json"
