--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -127,7 +127,7 @@
   "packageManager": "pnpm@10.6.4",
   "publishConfig": {
     "access": "public",
-    "typings": "lib/index.d.ts",
+    "types": "lib/index.d.ts",
     "main": "lib/index.js",
     "module": "lib/index.mjs",
     "exports": {
