--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,12 @@ on:
   pull_request:
     paths:
       - '.github/workflows/build.yml'
+      - 'internals/config/**'
       - 'packages/*/src/**'
       - 'packages/*/package.json'
-      - 'package.json'
       - 'pnpm-lock.yaml'
       - 'pnpm-workspace.yaml'
+      - 'package.json'
 jobs:
   Ubuntu:
     runs-on: ubuntu-latest
