--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "11.0.1",
+  "version": "12.0.0",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
   "exports": {
@@ -19,21 +19,9 @@
     }
   },
   "scripts": {
-    "test": "ts-node deploy --tag test",
-    "test:template": "npm run --tag test --template",
-    "-------------------------------------------------": "",
-    "build": "rimraf lib && tsc && rollup -c",
+    "build": "rimraf lib && tsc && rollup -c && cp ../../README.md README.md",
     "dev": "rimraf lib && tsc --watch",
-    "dev:errors": "tsc --project tsconfig.errors.json --watch",
-    "eslint": "eslint",
-    "eslint:fix": "eslint --fix",
-    "prettier": "prettier src --check",
-    "prettier:fix": "prettier src --write",
-    "------------------------------------------------": "",
-    "package:latest": "ts-node deploy --tag latest",
-    "package:next": "ts-node deploy --tag next",
-    "package:patch": "ts-node deploy --tag patch",
-    "package:tgz": "ts-node deploy/tgz.ts"
+    "prepack": "pnpm run build"
   },
   "repository": {
     "type": "git",
