--- a/internals/examples/package.json
+++ b/internals/examples/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@typia/examples",
-  "version": "1.0.0",
+  "version": "12.0.0-dev.20260225",
   "description": "Example codes for typia website",
   "scripts": {
     "prepare": "ts-patch install",
