--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typia/core",
-  "version": "11.0.3",
+  "version": "12.0.0-dev.20260225",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
   "exports": {
