--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typia/langchain",
-  "version": "11.0.3",
+  "version": "12.0.0-dev.20260225",
   "description": "LangChain.js integration for typia",
   "main": "src/index.ts",
   "exports": {
