--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -8,12 +8,14 @@ on:
       - 'examples/**'
       - 'website/**'
       - 'website/package.json'
+      - 'package.json'
   pull_request:
     paths:
       - .github/workflows/website.yml
       - 'examples/**'
       - 'website/**'
       - 'website/package.json'
+      - 'package.json'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,10 +27,6 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
-      - name: Root
-        run: |
-          pnpm install
-          pnpm run package:tgz
       - name: Build
         working-directory: website
         run: |
