Add pnpm install step in workflow
Add pnpm install step before build process

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -27,6 +27,8 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
+      - name: Root
+        run: pnpm install
       - name: Build
         working-directory: website
         run: |
