--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "pnpm --filter=./tests/test-* -r start",
     "format": "prettier --write packages/**/*.ts && prettier --write internals/**/*.ts && prettier --write tests/**/*.ts",
     "package:latest": "pnpm --filter=./packages/* -r publish --tag latest --access public",
-    "package:next": "bash next.bash"
+    "package:next": "bash next.bash",
+    "package:tgz": "node website/build/tgz"
   },
   "repository": {
     "type": "git",
