--- a/website/package.json
+++ b/website/package.json
@@ -8,10 +8,10 @@
     "prebuild": "rimraf .next && rimraf out && npm run build:compiler && npm run build:typedoc",
     "postbuild": "npm run build:pagefind && npm run build:sitemap",
     "build:compiler": "node build/compiler",
-    "build:typedoc": "node build/typedoc",
     "build:pagefind": "pagefind --site .next/server/app --output-path out/_pagefind",
     "build:sitemap": "node build/sitemap",
-    "preinstall": "node build/tgz",
+    "build:tgz": "node build/tgz",
+    "build:typedoc": "node build/typedoc",
     "deploy": "node build/deploy",
     "dev": "next dev"
   },
