--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24.x
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@v4\
+        with:
+          version: 10
       
       - name: Install Dependencies
         run: pnpm install
