--- a/internals/examples/package.json
+++ b/internals/examples/package.json
@@ -4,8 +4,8 @@
   "version": "12.0.0-dev.20260225",
   "description": "Example codes for typia website",
   "scripts": {
-    "prepare": "ts-patch install",
-    "build": "rimraf bin && cross-env NODE_OPTIONS=\"--no-experimental-strip-types -r ts-node/register\" tsc && prettier --write bin/**/*.js"
+    "build": "rimraf bin && cross-env NODE_OPTIONS=\"--no-experimental-strip-types -r ts-node/register\" tsc && prettier --write bin/**/*.js",
+    "dev": "tsc --watch"
   },
   "repository": {
     "type": "git",
@@ -27,7 +27,6 @@
     "cross-env": "^7.0.3",
     "rimraf": "catalog:utils",
     "ts-node": "catalog:typescript",
-    "ts-patch": "catalog:typescript",
     "typescript": "catalog:typescript"
   },
   "dependencies": {
