--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -7,6 +7,7 @@
     ".": "./src/index.ts",
     "./lib/transform": "./src/transform.ts",
     "./lib/internal/*.js": "./src/internal/*.ts",
+    "./src/internal/*": "./src/internal/*.ts",
     "./package.json": "./package.json"
   },
   "bin": {
@@ -131,6 +132,11 @@
         "default": "./lib/transform.js"
       },
       "./lib/internal/*.js": {
+        "types": "./lib/internal/*.d.ts",
+        "import": "./lib/internal/*.mjs",
+        "default": "./lib/internal/*.js"
+      },
+      "./lib/internal/*": {
         "types": "./lib/internal/*.d.ts",
         "import": "./lib/internal/*.mjs",
         "default": "./lib/internal/*.js"
